# stonksbot

./: README.md  requirements.txt
demon/: poc.ipynb
forecaster/: README.md
forecaster/libs_exploration/: economics_fred.ipynb  prices_av.ipynb
notebooks/: economics_fred.ipynb  news_av.ipynb  news_yahoo.ipynb  prices.ipynb  prices_av.ipynb  prices_yahoo.ipynb
options/: .gitignore  README.md  backtest.py  backtest_analysis.ipynb  backtest_analysis_open2.ipynb  backtest_analysis_open5.ipynb  combos.py  experimento.ipynb  gradio_app.py  interactive_pnl_analysis.py  models.py  plots.py  pyproject.toml  requirements.txt  strategies.py
options/notebooks/: experimento.ipynb
options/services/: alpaca.py  base.py
